--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,19 @@ version: '3.8'
 services:
   app:
     container_name: gpt-email-api
-    image: vontainment/gpt-email-api:master  # Use your appropriate image
+    image: vontainment/gpt-email-api:dev # Use your appropriate image
     hostname: gpt-email-api
     restart: unless-stopped
     network_mode: bridge
     ports:
-      - "8075:80"  # Map port 80 of the container to port 80 on the host
+      - "8050:8050"  # Map port 80 of the container to port 8075 on the host
     environment:
-      BASE_URL: https://pdf.hugev.xyz  # Set this to your actual base URL
-      ACCOUNTS: [{"email": "user1@example.com", "password": "password1", "imap_server": "imap.example.com", "imap_port": 993, "smtp_server": "smtp.example.com", "smtp_port": 587}, {"email": "user2@example.com", "password": "password2", "imap_server": "imap.example2.com", "imap_port": 993, "smtp_server": "smtp.example2.com", "smtp_port": 587}]
+      BASE_URL: https://your-base-url.com  # Set this to your actual base URL
+      API_KEY: Optional API key to connect to api
+      WORKERS: 1 #uvicorn workers 1 should be enough for personal use
+      UVICORN_CONCURRENCY: 32 #this controls the mac connections. Anything over the API_concurrancy value is put in query pool. Anything over this number is rejected.
+      ACCOUNTS: >
+        [
+          {"email": "user1@example.com", "password": "password1", "imap_server": "imap.example.com", "imap_port": 993, "smtp_server": "smtp.example.com", "smtp_port": 587},
+          {"email": "user2@example.com", "password": "password2", "imap_server": "imap.example2.com", "imap_port": 993, "smtp_server": "smtp.example2.com", "smtp_port": 587}
+        ]
