--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,19 @@
-name: Build and Push Image
+name: Build and Push API Image
 
 on:
   push:
     branches:
-      - "main"
-      - "dev"
+      - 'main'
+      - 'dev'
   release:
     types: [published]
 
 jobs:
-  build-and-push-web:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -24,23 +21,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract metadata
-        uses: docker/metadata-action@v5
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
+        uses: docker/metadata-action@v4
         with:
           images: vontainment/gpt-email-api
-          flavor: latest=false
           tags: |
-            type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=dev,enable=${{ github.ref == 'refs/heads/dev' }}
-            type=raw,value=dev2,enable=${{ github.ref == 'refs/heads/dev2' }}
-            type=sha,priority=100,enable=${{ github.event_name == 'push' }}
-
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=sha,priority=100
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+          
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=vontainment/gpt-email-api:latest
+          cache-to: type=inline,mode=max
