--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   app:
     container_name: gpt-email-api
@@ -7,9 +7,9 @@ services:
     restart: unless-stopped
     network_mode: bridge
     ports:
-      - "8050:8050"  # Map port 80 of the container to port 8075 on the host
+      - "8050:8050" # Map port 80 of the container to port 8075 on the host
     environment:
-      BASE_URL: https://your-base-url.com  # Set this to your actual base URL
+      BASE_URL: https://your-base-url.com # Set this to your actual base URL
       API_KEY: Optional API key to connect to api
       WORKERS: 1 #uvicorn workers 1 should be enough for personal use
       UVICORN_CONCURRENCY: 32 #this controls the mac connections. Anything over the API_concurrancy value is put in query pool. Anything over this number is rejected.
@@ -20,4 +20,3 @@ services:
       ACCOUNT_SMTP_SERVER: smtp.example.com
       ACCOUNT_SMTP_PORT: 587
       ACCOUNT_REPLY_TO: replyto@example.com
-      SIGNATURE_URL: https://example.com/signature.html
