--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "8050:8050" # Map port 80 of the container to port 8075 on the host
     environment:
-      BASE_URL: https://your-base-url.com # Set this to your actual base URL
+      BASE_URL: https://api.servicesbyv.com # Set this to your actual base URL
+      ROOT_PATH: /email
       API_KEY: Optional API key to connect to api
       WORKERS: 1 #uvicorn workers 1 should be enough for personal use
       UVICORN_CONCURRENCY: 32 #this controls the mac connections. Anything over the API_concurrancy value is put in query pool. Anything over this number is rejected.
