modified:   .github/workflows/readmeai.yml 	deleted:    readmeai.toml

--- a/.github/workflows/readmeai.yml
+++ b/.github/workflows/readmeai.yml
@@ -1,8 +1,6 @@
-name: Generate README with GitHub Models
+name: Generate README with OpenAI
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -10,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write   # needed to commit README updates
-      id-token: write   # required for GitHub Models auth
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,20 +18,26 @@ jobs:
           python-version: "3.x"
 
       - name: Install ReadmeAI
-        run: pip install readmeai
+        run: pip install --upgrade readmeai
 
-      - name: Generate README with GitHub Models
+      - name: Generate README
         env:
-          # Use the built-in GitHub Actions token for auth
-          OPENAI_API_KEY: ${{ github.token }}
-          OPENAI_API_BASE: "https://models.inference.ai.azure.com"
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          readmeai --repository . --api openai --model gpt-4o-mini
+          readmeai \
+            --repository . \
+            --api openai \
+            --model gpt-4.1-nano \
+            --output readmeai.md \
+            --badge-style flat-square \
+            --header-style classic \
+            --navigation-style number \
+            --tree-depth 5
 
       - name: Commit and push updated README
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "chore: update README using GitHub Models" || echo "No changes"
+          git add readmeai.md
+          git commit -m "chore: update README with ReadmeAI" || echo "No changes"
           git push
