modified:   .github/workflows/readmeai.yml

--- a/.github/workflows/readmeai.yml
+++ b/.github/workflows/readmeai.yml
@@ -31,7 +31,7 @@ jobs:
             --output readmeai.md \
             --badge-style flat-square \
             --header-style classic \
-            --navigation-style number \
+            --navigation-style bullet \
             --tree-max-depth 5 \
             --logo llm
 
