modified:   .github/workflows/readmeai.yml

--- a/.github/workflows/readmeai.yml
+++ b/.github/workflows/readmeai.yml
@@ -33,7 +33,7 @@ jobs:
             --header-style classic \
             --navigation-style bullet \
             --tree-max-depth 5 \
-            --logo custom
+            --logo ./v-gpt-email-api.png
 
       - name: Commit and push updated README
         run: |
