modified:   .gitea/workflows/main.yml 	modified:   Dockerfile

--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -15,12 +15,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Download dependencies to cache
-        run: |
-          pip download -r requirements.txt --dest /opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/pip/
-          mkdir -p ${{ gitea.workspace }}/cache
-          cp -r /opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/pip/* ${{ gitea.workspace }}/cache/
-
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
@@ -41,6 +35,14 @@ jobs:
             type=raw,value=dev,enable=${{ gitea.ref == 'refs/heads/dev' }}
             type=sha,priority=100,enable=${{ gitea.event_name == 'push' }}
 
+      - name: Cache Docker build layers
+        uses: actions/cache@v3
+        with:
+          path: /opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build
+          key: build-${{ runner.os }}-${{ gitea.sha }}
+          restore-keys: |
+            build-${{ runner.os }}-
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -49,10 +51,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=local,src=/opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/build/
-          cache-to: type=local,dest=/opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/build-new/
+          cache-from: type=local,src=/opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build
+          cache-to: type=local,dest=/opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build-new,mode=max
 
       - name: Rotate build cache
         run: |
-          rm -rf /opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/build/
-          mv /opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/build-new/ /opt/hostedtoolcache/${{ gitea.repository }}-${{ gitea.ref_name }}/build/
+          rm -rf /opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build
+          mv /opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build-new /opt/hostedtoolcache/${{ gitea.repository }}/${{ gitea.ref_name }}/build
